[package]
name = "xd-tts"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
candle-core = { "git" = "https://github.com/huggingface/candle" }
candle-nn = { "git" = "https://github.com/huggingface/candle" }
candle-onnx = { "git" = "https://github.com/huggingface/candle" }
clap = { version = "4.4.7", features = ["derive"] }
deunicode = "1.3.2"
hound = "3.5.0"
ndarray = "0.15.6"
once_cell = "1.15.0"
regex = "1.6.0"
