[package]
name = "xd-tts"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
burn = { version = "0.10.0", features = ["ndarray"] }
candle-core = { "git" = "https://github.com/huggingface/candle" }
candle-nn = { "git" = "https://github.com/huggingface/candle" }
candle-onnx = { "git" = "https://github.com/huggingface/candle" }
clap = { version = "4.4.7", features = ["derive"] }
csv = "1.3.0"
derive = "1.0.0"
deunicode = "1.3.2"
features = "0.10.0"
hound = "3.5.0"
ndarray = "0.15.6"
once_cell = "1.15.0"
regex = "1.6.0"
serde = "1.0.192"
serde_json = "1.0.108"

[build-dependencies]
burn-import = "0.10.0"
